--- a/core-service/src/resources/sns/sns.yml
+++ b/core-service/src/resources/sns/sns.yml
@@ -13,7 +13,7 @@ Resources:
           - MySNSTopic
           - TopicArn
       Endpoint: 
-        Fn::ImportValue: myEmailNotificationQueue
+        Fn::ImportValue: emailNotificationQueue
       Protocol: sqs
 
       
@@ -25,7 +25,7 @@ Resources:
           - MySNSTopic
           - TopicArn
       Endpoint: 
-        Fn::ImportValue: mySlackNotificationQueue
+        Fn::ImportValue: slackNotificationQueue
       Protocol: sqs
 
 Outputs:
