--- a/core-service/src/resources/sns/sns.yml
+++ b/core-service/src/resources/sns/sns.yml
@@ -14,6 +14,11 @@ Resources:
           - TopicArn
       Endpoint: 
         Fn::ImportValue: emailNotificationQueue
+      FilterPolicy:
+        eventType: 
+          - USER_UPDATED
+      FilterPolicyScope:
+        MessageAttributes 
       Protocol: sqs
 
       
@@ -26,6 +31,11 @@ Resources:
           - TopicArn
       Endpoint: 
         Fn::ImportValue: slackNotificationQueue
+      FilterPolicy:
+        eventType: 
+          - USER_CREATED
+      FilterPolicyScope:
+        MessageAttributes 
       Protocol: sqs
 
 Outputs:
